--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
 </head>
 <body>
 
+  <div class="banner">
+    <img class="img-flex" src="images/placeholder-16by9.svg" alt="placeholder">
+    <div class="banner-content">
+      <h2 class="card-title">Giant space moths invade Earth</h2>
+      <p>Our friendly giant, nuclear radiated lizard steps up to battle against the nefarious space moths</p>
+    </div>
+  </div>
+
 </body>
 </html>
