--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div class="banner">
     <img class="img-flex" src="images/placeholder-16by9.svg" alt="placeholder">
     <div class="banner-content">
-      <h2 class="card-title">Giant space moths invade Earth</h2>
-      <p>Our friendly giant, nuclear radiated lizard steps up to battle against the nefarious space moths</p>
+      <h2 class="card-title"><span>Giant space moths invade Earth</span></h2>
+      <p class="card-body">Our friendly giant, nuclear radiated lizard steps up to battle against the nefarious space moths</p>
     </div>
   </div>
 
